# yagoll

./: Cargo.toml  README.md  bad-test.txt  test.txt
examples/: example-board.txt  glider-gun.txt  play-game-of-life.rs
src/: board.rs  cell.rs  lib.rs
tests/test-boards/: bad-form.txt  four-circles.txt  glider.txt
